welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:10: error: type mismatch;
 found   : Unit
 required: Int
		compteur = compteur +1
                         ^countTeen:9: error: type mismatch;
 found   : Unit
 required: Int
	if ((c>=13) && (c<=19)) {
        ^